# codspeed-aoc

./: Cargo.toml  lut  lut2
.github/workflows/: codsped.yml
benches/: bench.rs
src/: lib.rs  util.rs
